// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubtractionToolbar /> renders correctly when [canModify=false] 1`] = `
<Toolbar>
  <FormGroup
    bsClass="form-group"
  >
    <InputGroup
      bsClass="input-group"
    >
      <InputGroupAddon
        bsClass="input-group-addon"
      >
        <Icon
          faStyle="fas"
          fixedWidth={false}
          name="search"
          pullRight={false}
        />
      </InputGroupAddon>
      <FormControl
        bsClass="form-control"
        componentClass="input"
        placeholder="Name"
        type="text"
        value="test"
      />
    </InputGroup>
  </FormGroup>
</Toolbar>
`;

exports[`<SubtractionToolbar /> renders correctly when [canModify=true] 1`] = `
<Toolbar>
  <FormGroup
    bsClass="form-group"
  >
    <InputGroup
      bsClass="input-group"
    >
      <InputGroupAddon
        bsClass="input-group-addon"
      >
        <Icon
          faStyle="fas"
          fixedWidth={false}
          name="search"
          pullRight={false}
        />
      </InputGroupAddon>
      <FormControl
        bsClass="form-control"
        componentClass="input"
        placeholder="Name"
        type="text"
        value="test"
      />
    </InputGroup>
  </FormGroup>
  <withRouter(LinkContainer)
    to={
      Object {
        "state": Object {
          "createSubtraction": true,
        },
      }
    }
  >
    <Button
      bsStyle="primary"
      icon="plus-square fa-fw"
      pullRight={false}
      tip="Create"
      tipPlacement="top"
    />
  </withRouter(LinkContainer)>
</Toolbar>
`;
